# robohockey

./: .gitignore  .hgignore  CMakeLists.txt  Doxyfile.in  README.md  checkIncludeGuards.sh  robohockey.files  robohockey.includes  testrunner.supp
common/: CMakeLists.txt  ColorType.h  angle.cpp  angle.h  angletest.cpp  angletest.h  circle.cpp  circle.h  circletest.cpp  circletest.h  colorType.h  compare.cpp  compare.h  comparetest.cpp  comparetest.h  console.cpp  console.h  deletemelater.h  deletemelatertest.cpp  deletemelatertest.h  discretefunction.cpp  discretefunction.h  discretefunctiontest.cpp  discretefunctiontest.h  fieldcolor.h  fieldobjectcolor.h  line.cpp  line.h  linetest.cpp  linetest.h  logger.cpp  logger.h  loggerimpl.cpp  loggerimpl.h  loggermock.cpp  loggermock.h  loggertest.cpp  loggertest.h  path.cpp  path.h  (+55 more)
layer/autonomous/: CMakeLists.txt  borderstone.cpp  borderstone.h  borderstonedistances.cpp  borderstonedistances.h  borderstonedistancestest.cpp  borderstonedistancestest.h  borderstonetest.cpp  borderstonetest.h  field.h  fielddetectionresult.cpp  fielddetectionresult.h  fielddetectionresulttest.cpp  fielddetectionresulttest.h  fielddetector.cpp  fielddetector.h  fielddetectortest.cpp  fielddetectortest.h  fieldimpl.cpp  fieldimpl.h  fieldlivedatatest.cpp  fieldlivedatatest.h  fieldmock.cpp  fieldmock.h  fieldobject.cpp  fieldobject.h  fieldobjectcolor.h  fieldobjectcolorcompare.cpp  fieldobjectcolorcompare.h  fieldobjectcolorcomparetest.cpp  fieldobjectcolorcomparetest.h  fieldobjectdistancecompare.cpp  fieldobjectdistancecompare.h  fieldobjectdistancecomparetest.cpp  fieldobjectdistancecomparetest.h  fieldobjecttest.cpp  fieldobjecttest.h  fieldpositionchecker.h  fieldtest.cpp  fieldtest.h  (+34 more)
layer/dataanalysis/: CMakeLists.txt  camera.h  cameraimpl.cpp  cameraimpl.h  cameramock.cpp  cameramock.h  cameraobject.cpp  cameraobject.h  cameraobjects.cpp  cameraobjects.h  cameraobjectstest.cpp  cameraobjectstest.h  cameraobjecttest.cpp  cameraobjecttest.h  camerastub.cpp  camerastub.h  cameratest.cpp  cameratest.h  colorType.h  dataanalyser.h  dataanalyserimpl.cpp  dataanalyserimpl.h  dataanalysermock.cpp  dataanalysermock.h  dataanalyserstub.cpp  dataanalyserstub.h  dataanalysertest.cpp  dataanalysertest.h  engine.h  engineimpl.cpp  engineimpl.h  enginemock.cpp  enginemock.h  enginestub.cpp  enginestub.h  enginetest.cpp  enginetest.h  lidar.h  lidarimpl.cpp  lidarimpl.h  (+45 more)
layer/hardware/: CMakeLists.txt  camera.h  cameraimpl.cpp  cameraimpl.h  cameramock.cpp  cameramock.h  camerastub.cpp  camerastub.h  deletemelater.cpp  deletemelater.h  deletemelatertest.h  engine.cpp  engine.h  engineimpl.cpp  engineimpl.h  enginemock.cpp  enginemock.h  enginestub.cpp  enginestub.h  lidar.cpp  lidar.h  lidarimpl.cpp  lidarimpl.h  lidarmock.cpp  lidarmock.h  lidarstub.cpp  lidarstub.h  odometry.h  odometryimpl.cpp  odometryimpl.h  odometrymock.cpp  odometrymock.h  odometrystub.cpp  odometrystub.h  robot.h  robotimpl.cpp  robotimpl.h  robotmock.cpp  robotmock.h  robotstub.cpp  (+11 more)
layer/strategy/: CMakeLists.txt  achievegoals.cpp  achievegoals.h  achievegoalstest.cpp  achievegoalstest.h  calibrate.cpp  calibrate.h  calibratetest.cpp  calibratetest.h  drivetofinalposition.cpp  drivetofinalposition.h  drivetofinalpositiontest.cpp  drivetofinalpositiontest.h  hideenemypucks.cpp  hideenemypucks.h  hideenemypuckstest.cpp  hideenemypuckstest.h  initialstate.cpp  initialstate.h  initialstatetest.cpp  initialstatetest.h  pause.cpp  pause.h  pausetest.cpp  pausetest.h  referee.h  refereeimpl.cpp  refereeimpl.h  refereemock.cpp  refereemock.h  state.cpp  state.h  statemachine.cpp  statemachine.h  statemachinetest.cpp  statemachinetest.h  statemock.cpp  statemock.h
layer/strategy/common/: CMakeLists.txt  colordependendpucktargetfetcher.h  colordependendpucktargetfetchermock.cpp  colordependendpucktargetfetchermock.h  colordependendpucktargetfetchertoachivegoals.cpp  colordependendpucktargetfetchertoachivegoals.h  colordependendpucktargetfetchertoachivegoalstest.cpp  colordependendpucktargetfetchertoachivegoalstest.h  colordependendpucktargetfetchertohidepucks.cpp  colordependendpucktargetfetchertohidepucks.h  colordependendpucktargetfetchertohidepuckstest.cpp  colordependendpucktargetfetchertohidepuckstest.h  colordependentpucktargetfetcher.cpp  colordependentpucktargetfetcher.h  colordependentpucktargetfetchermock.cpp  colordependentpucktargetfetchermock.h  colordependentpucktargetfetchertest.cpp  colordependentpucktargetfetchertest.h  colordependentpucktargetfetchertoachivegoals.cpp  colordependentpucktargetfetchertoachivegoals.h  colordependentpucktargetfetchertoachivegoalstest.cpp  colordependentpucktargetfetchertoachivegoalstest.h  colordependentpucktargetfetchertohidepucks.cpp  colordependentpucktargetfetchertohidepucks.h  colordependentpucktargetfetchertohidepuckstest.cpp  colordependentpucktargetfetchertohidepuckstest.h  drivepuck.cpp  drivepuck.h  drivepuckmock.cpp  drivepuckmock.h  drivepucktoachivegoals.cpp  drivepucktoachivegoals.h  drivepucktoachivegoalstest.cpp  drivepucktoachivegoalstest.h  drivepucktohidepucks.cpp  (+34 more)
layer/view/: CMakeLists.txt  actionwindow.cpp  actionwindow.h  actionwindow.ui  controller.cpp  controller.h  graph.cpp  graph.h  graphicshow.cpp  graphicshow.h  model.cpp  model.h  modeltest.cpp  modeltest.h  robotdriver.cpp  robotdriver.h  robotdriverloop.cpp  robotdriverloop.h  robotdrivertest.cpp  robotdrivertest.h  view.ui  viewer.cpp  viewer.h  viewer.ui  window.cpp  window.h
main/: CMakeLists.txt  cameracalibration.cpp  collisiondetection.cpp  datalogger.cpp  game.cpp  game.h  gameautomatic.cpp  gameautomatic.h  gamemock.cpp  gamemock.h  gameremotecontrol.cpp  gameremotecontrol.h  gametest.cpp  gametest.h  inputargumentparser.cpp  inputargumentparser.h  inputargumentparsertest.cpp  inputargumentparsertest.h  main.cpp  maincameracalibration.cpp  maincollisiondetection.cpp  maindatalogger.cpp  mainremotecontrol.cpp  maintestrunnerlivedata.cpp  remotecontrol.cpp  remotecontroll_2.cpp  sonartest.cpp  testregistration.cpp  testregistrationlivedata.cpp
(+2401 files in other folders)
