set(COMMON_SRC
	compare.cpp
	point.cpp
	discretefunction.cpp
	rectangle.cpp
	circle.cpp
	robotposition.cpp
	angle.cpp
	path.cpp
	line.cpp
	pathintersectpoints.cpp
	console.cpp
	quadraticequation.cpp
	watchimpl.cpp
	randomdecision.cpp
	pointdistancecompare.cpp
	timesmoothedboolean.cpp
	stopwatch.cpp
	segfaultstacktraceprinter.cpp
	loggerimpl.cpp
	pidcontroller.cpp
)

set(COMMON_TEST_SRC
	comparetest.cpp
	pointtest.cpp
	discretefunctiontest.cpp
	rectangletest.cpp
	circletest.cpp
	watchtest.cpp
	robotpositiontest.cpp
	angletest.cpp
	pathtest.cpp
	linetest.cpp
	pathintersectpointstest.cpp
	quadraticequationtest.cpp
	signumtest.cpp
	watchmock.cpp
	randomdecisiontest.cpp
	pointdistancecomparetest.cpp
	timesmoothedbooleantest.cpp
	stopwatchtest.cpp
	loggertest.cpp
	loggermock.cpp
	pidcontrollertest.cpp
)

add_library(common ${COMMON_SRC})
add_library(commontest ${COMMON_TEST_SRC})
